--- a/src/components/CustomStyles.astro
+++ b/src/components/CustomStyles.astro
@@ -42,13 +42,14 @@ import '@fontsource/sarabun' // 'DM Sans'
   }
 
   .dark {
-    --aw-font-sans: 'Inter Variable';
-    --aw-font-serif: 'Inter Variable';
-    --aw-font-heading: 'Inter Variable';
+    --aw-font-sans: 'Sarabun';
+    --aw-font-serif: 'Sarabun';
+    --aw-font-heading: 'Sarabun';
 
     --aw-color-primary: rgb(1 97 239);
     --aw-color-secondary: rgb(1 84 207);
     --aw-color-accent: rgb(109 40 217);
+    --aw-color-green: #08c54c;
 
     --aw-color-text-heading: rgb(247, 248, 248);
     --aw-color-text-default: rgb(229 236 246);
