--- a/src/pages/homes/history.astro
+++ b/src/pages/homes/history.astro
@@ -14,7 +14,7 @@ import Brands from '~/components/widgets/Brands.astro'
 import { YouTube } from 'astro-embed'
 
 const metadata = {
-  title: 'Startup Landing Page',
+  title: 'History',
 }
 ---
 
@@ -36,7 +36,7 @@ const metadata = {
   >
     <Fragment slot="title">
       ประวัติองค์กรคริสตจักร <span class="hidden sm:inline"></span>
-      <span class="highlight text-green dark:text-white">เมล็ดพันธุ์</span> on Youtube
+      <span class="highlight text-green dark:text-white">เมล็ดพันธุ์</span>
     </Fragment>
 
     <Fragment slot="subtitle">
