--- a/src/pages/homes/mobile-app.astro
+++ b/src/pages/homes/mobile-app.astro
@@ -22,7 +22,7 @@ const googlePlayDownloadLink =
   'https://play.google.com/store/apps/details?id=com.seedchurchthailand.seed&pcampaignid=web_share'
 
 const metadata = {
-  title: 'Mobile App Homepage',
+  title: 'Mobile App',
 }
 ---
 
@@ -53,11 +53,11 @@ const metadata = {
     tagline="Mobile App"
     image={{
       src: 'https://images.unsplash.com/photo-1535303311164-664fc9ec6532?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=987&q=80',
-      alt: 'AstroWind Hero Image',
+      alt: 'Seed App Image',
     }}
   >
     <Fragment slot="title">
-      <span class="highlight text-green dark:text-white">Seed App</span>
+      <span class="highlight text-green dark:text-green">Seed App</span>
       <br /> เข้าใกล้เรามากขึ้น <span class="hidden xl:inline">ผ่าน Application</span>
     </Fragment>
 
