--- a/src/pages/homes/pastor.astro
+++ b/src/pages/homes/pastor.astro
@@ -30,7 +30,7 @@ const metadata = {
       ]}
       actions={[
         {
-          text: 'Hire me',
+          text: '',
           href: '#',
         },
       ]}
@@ -45,7 +45,7 @@ const metadata = {
     id="hero"
     title="Prapan Meepiankij"
     tagline="ศิยาภิบาลคริสตเมล็ดพันธุ์"
-    actions={[{ variant: 'primary', text: 'Hire me', href: getPermalink('/contact#form') }]}
+    actions={[{ variant: 'primary', text: 'About me', href: '#about' }]}
   >
     <Fragment slot="subtitle">
       ผู้ที่ได้รับการทรงเรียกให้รับใช้พระเจ้า และได้นำประสบการณ์กว่า 14 ปี ในด้านการตลาดมาสนับสนุนพันธกิจของคริสตจักร ด้วยความเชี่ยวชาญด้าน การสร้างแบรนด์ การสื่อสาร และการจัดอีเวนต์    </Fragment>
