--- a/src/pages/homes/give.astro
+++ b/src/pages/homes/give.astro
@@ -41,7 +41,7 @@ const metadata = {
   <!-- Hero2 Widget ******************* -->
 
   <Hero2
-    id='bank'
+    id="bank"
     tagline="ถวายทรัพย์เงินบาท"
     actions={[
       { variant: 'primary', target: '', text: 'ถวายเป็น cryptocurrency', href: '#crypto' },
@@ -61,9 +61,9 @@ const metadata = {
       ชื่อบัญชีเอกมณีและวัธนีและพิชาม
     </Fragment>
   </Hero2>
-  <Note  quote="Note:" text="ท่านใดที่ยังไม่เข้าใจเรื่องการถวายสิบลด ให้ขอการถวายเลื่อนผ่านหน้าท่านไปก่อน"/>
+  <Note quote="Note:" text="ท่านใดที่ยังไม่เข้าใจเรื่องการถวายสิบลด ให้ขอการถวายเลื่อนผ่านหน้าท่านไปก่อน" />
   <Hero2
-    id='crypto'
+    id="crypto"
     tagline="ถวายทรัพย์คริปโต"
     actions={[
       { variant: 'primary', target: '', text: 'ถวายเป็นสกุลเงิน', href: '#bank' },
@@ -297,7 +297,7 @@ const metadata = {
   <!-- FAQs Widget ******************* -->
 
   <FAQs
-    id='faqs'
+    id="faqs"
     title="Frequently Asked Questions"
     items={[
       {
@@ -331,11 +331,7 @@ const metadata = {
 
   <!-- BlogLatestPost Widget **************** -->
 
-  <BlogLatestPosts
-    id="blog"
-    title="Latest Posts"
-    information={``}
-  >
+  <BlogLatestPosts id="blog" title="Latest Posts" information={``}>
     <Fragment slot="bg">
       <div class="absolute inset-0 bg-blue-50 dark:bg-transparent"></div>
     </Fragment>
