--- a/src/pages/homes/mobile-app.astro
+++ b/src/pages/homes/mobile-app.astro
@@ -63,7 +63,10 @@ const metadata = {
 
     <Fragment slot="subtitle">
       <span class="hidden sm:inline">
-        แอพพลิเคชั่น Seed จัดทำโดยองค์กรคริสตจักรเมล็ดพันธุ์ เพื่อรวบรวมคำสอนต่างๆ คำเทศนา คำพยาน บทเฝ้าเดี่ยว ข่าวสารขององค์กร เพื่อความสะดวกของสมาชิกในองค์กร ศึกษาเรื่องราวของพระเจ้า และติดตามข่าวสารต่างๆ ซึ่งสิ่งเหล่านี้ได้รวมไว้ในแอพพลิเคชั่น Seed แล้ว      </span>
+        แอพพลิเคชั่น Seed จัดทำโดยองค์กรคริสตจักรเมล็ดพันธุ์ เพื่อรวบรวมคำสอนต่างๆ คำเทศนา คำพยาน บทเฝ้าเดี่ยว
+        ข่าวสารขององค์กร เพื่อความสะดวกของสมาชิกในองค์กร ศึกษาเรื่องราวของพระเจ้า และติดตามข่าวสารต่างๆ
+        ซึ่งสิ่งเหล่านี้ได้รวมไว้ในแอพพลิเคชั่น Seed แล้ว
+      </span>
       <!-- Download now and embark on a journey to elevate your projects like never before. -->
     </Fragment>
 
