--- a/src/pages/homes/pastor.astro
+++ b/src/pages/homes/pastor.astro
@@ -48,7 +48,9 @@ const metadata = {
     actions={[{ variant: 'primary', text: 'About me', href: '#about' }]}
   >
     <Fragment slot="subtitle">
-      ผู้ที่ได้รับการทรงเรียกให้รับใช้พระเจ้า และได้นำประสบการณ์กว่า 14 ปี ในด้านการตลาดมาสนับสนุนพันธกิจของคริสตจักร ด้วยความเชี่ยวชาญด้าน การสร้างแบรนด์ การสื่อสาร และการจัดอีเวนต์    </Fragment>
+      ผู้ที่ได้รับการทรงเรียกให้รับใช้พระเจ้า และได้นำประสบการณ์กว่า 14 ปี ในด้านการตลาดมาสนับสนุนพันธกิจของคริสตจักร
+      ด้วยความเชี่ยวชาญด้าน การสร้างแบรนด์ การสื่อสาร และการจัดอีเวนต์
+    </Fragment>
   </Hero>
 
   <!-- Content Widget **************** -->
@@ -90,13 +92,9 @@ const metadata = {
   >
     <Fragment slot="content">
       <h2 class="mb-2 text-2xl font-bold tracking-tight dark:text-white sm:text-3xl">About me</h2>
-      <p>
-        ผมเป็นคริสเตียนที่มีความเชื่อในพระเจ้า และมีความมุ่งมั่นที่จะเปลี่ยนแปลงประเทศไทยให้เป็นประเทศคริสเตียน
-      </p>
+      <p>ผมเป็นคริสเตียนที่มีความเชื่อในพระเจ้า และมีความมุ่งมั่นที่จะเปลี่ยนแปลงประเทศไทยให้เป็นประเทศคริสเตียน</p>
       <br />
-      <p>
-      ที่มีความเชื่อในพระเจ้า และมีความมุ่งมั่นที่จะเปลี่ยนแปลงประเทศไทยให้เป็นประเทศคริสเตียน
-      </p>
+      <p>ที่มีความเชื่อในพระเจ้า และมีความมุ่งมั่นที่จะเปลี่ยนแปลงประเทศไทยให้เป็นประเทศคริสเตียน</p>
       <br />
       <p></p>
     </Fragment>
