--- a/src/pages/[...blog]/[...page].astro
+++ b/src/pages/[...blog]/[...page].astro
@@ -37,11 +37,7 @@ const metadata = {
 
 <Layout metadata={metadata}>
   <section class="mx-auto max-w-4xl px-6 py-12 sm:px-6 sm:py-16 lg:py-20">
-    <Headline
-      subtitle=""
-    >
-      The Blog
-    </Headline>
+    <Headline subtitle=""> The Blog </Headline>
     <BlogList posts={page.data} />
     <Pagination prevUrl={page.url.prev} nextUrl={page.url.next} />
     <!--
