feat(pages): add 404 page video cards
- Added VideoCards component to 404 page
- Improved 404 page content

--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,4 +1,5 @@
 ---
+import VideoCards from '@/components/VideoCards'
 import Layout from '~/layouts/Layout.astro'
 import { getHomePermalink } from '~/utils/permalinks'
 
