--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -24,7 +24,7 @@ const googlePlayDownloadLink =
   'https://play.google.com/store/apps/details?id=com.seedchurchthailand.seed&pcampaignid=web_share'
 
 const metadata = {
-  title: 'AstroWind — Free template for creating websites with Astro + Tailwind CSS',
+  title: 'คริสตจักรเมล็ดพันธุ์กรุงเทพ',
   ignoreTitleTemplate: true,
 }
 ---
@@ -297,7 +297,7 @@ const metadata = {
 
   <!-- Content Widget **************** -->
 
-  <!-- <Content
+  <Content
     id="porfolio"
     title="Small group"
     subtitle="หรือกลุ่มแคร์ที่เราจะได้รู้จักกันมากขึ้นและสามัคคีธรรม"
@@ -306,12 +306,12 @@ const metadata = {
       {
         title: 'Description:',
         description:
-          'Developed a comprehensive brand identity for a tech startup, Tech Innovators, specializing in disruptive innovations. The goal was to convey a modern yet approachable image that resonated with both corporate clients and tech enthusiasts.',
+          'กลุ่มสายฮาของคน cool เราเรียนรู้คำของพระเจ้าและเติบโตไปด้วยกัน  เราปรึกษาและทานอาหารร่วมกัน ',
       },
       {
-        title: 'Role:',
+        title: 'วิธีการเดินทางมา:',
         description:
-          'Led the entire branding process from concept to execution. Created a dynamic logo that symbolized innovation, selected a vibrant color palette, and I designed corporate stationery, website graphics, and social media assets.',
+          'ลง BTS ลง bts สถานีบางบัวนะครับ พายเรือมา10กิโลแล้วข้ามสะพานมาจะเจอ',
       },
     ]}
     image={{
@@ -327,14 +327,14 @@ const metadata = {
   >
     <Fragment slot="content">
       <h3 class="mb-2 text-2xl font-bold tracking-tight dark:text-white sm:text-3xl">
-        ราชเทวี @ Creative Space Cafe สภาคริสตจักร: <br /><span class="text-2xl"></span>
+        มอ.ศรีปทุม @ข้างคาเฟ่อเมซอล มอ.ศรีปทุม: <br /><span class="text-2xl"></span>
       </h3>
     </Fragment>
 
     <Fragment slot="bg">
       <div class="absolute inset-0 bg-blue-50 dark:bg-transparent"></div>
     </Fragment>
-  </Content> -->
+  </Content>
 
   <!-- Content Widget **************** -->
 
