--- a/src/components/Favicons.astro
+++ b/src/components/Favicons.astro
@@ -1,7 +1,7 @@
 ---
-import favIcon from '~/assets/favicons/favicon.ico'
-import favIconSvg from '~/assets/favicons/favicon.svg'
-import appleTouchIcon from '~/assets/favicons/apple-touch-icon.png'
+import favIcon from '~/assets/favicons/sprout_346246.ico'
+import favIconSvg from '~/assets/favicons/sprout_346246.svg'
+import appleTouchIcon from '~/assets/favicons/sprout_346246.svg'
 ---
 
 <link rel="shortcut icon" href={favIcon} />
