--- a/src/pages/homes/give.astro
+++ b/src/pages/homes/give.astro
@@ -72,7 +72,7 @@ const metadata = {
         ]}
         image={{
             src: '~/assets/images/QR_SEED_Wallet.png',
-            alt: 'AstroWind Hero Image',
+            alt: 'QR_SEED_Wallet',
         }}
     >
         <Fragment slot="title">
