--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -55,10 +55,9 @@ const metadata = {
 
         <Fragment slot="subtitle">
             <span class="hidden sm:inline">
-                <span class="font-semibold text-blue-600">คริสตจักรแห่งการสร้างสาวกและตั้งคริสตจักร</span>
+                <span class="font-semibold text-blue-600">คริสตจักรที่เน้นการมี ​Relationship กับพระเจ้า</span>
             </span>
-            <span class="mb-1 block font-bold text-blue-600 sm:hidden">คริสตจักรแห่งการสร้างสาวกและตั้งคริสตจักร</span>
-            โบสที่มีวัยรุ่น 100% และ culture แบบวัยรุ่น
+            <span class="mb-1 block font-bold text-blue-600 sm:hidden">คริสตจักรที่เน้นการมี ​Relationship กับพระเจ้า</span>
         </Fragment>
     </Hero>
 
@@ -113,8 +112,8 @@ const metadata = {
             },
         ]}
         image={{
-            src: 'https://images.unsplash.com/photo-1600132806370-bf17e65e942f?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2194&q=80',
-            alt: 'SeedChruch logo',
+            src: '~/assets/images/culture/SpiritualMaturity.jpg',
+            alt: 'SpiritualMaturity',
         }}
     >
         <Fragment slot="content">
@@ -148,8 +147,8 @@ const metadata = {
             },
         ]}
         image={{
-            src: 'https://images.unsplash.com/photo-1600132806370-bf17e65e942f?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2194&q=80',
-            alt: 'Blueprint Image',
+            src: '~/assets/images/culture/Evergelization.jpg',
+            alt: 'Evergelization',
         }}
     >
         <Fragment slot="content">
@@ -185,8 +184,8 @@ const metadata = {
             },
         ]}
         image={{
-            src: 'https://images.unsplash.com/photo-1611462985358-60d3498e0364?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80',
-            alt: 'Astronauts Image',
+            src:  '~/assets/images/culture/EstablishChurch.jpeg',
+            alt: 'EstablishChurch',
         }}
     >
         <Fragment slot="content">
@@ -228,8 +227,8 @@ const metadata = {
             },
         ]}
         image={{
-            src: 'https://images.unsplash.com/photo-1616198814651-e71f960c3180?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=987&q=80',
-            alt: 'Steps image',
+            src:  '~/assets/images/culture/Discipleship.jpeg',
+            alt: 'Discipleship',
         }}
     />
 
@@ -300,7 +299,7 @@ const metadata = {
 
     <!-- Content Widget **************** -->
 
-  <Content
+  <!-- <Content
     id="porfolio"
     title="Small group"
     subtitle="หรือกลุ่มแคร์ที่เราจะได้รู้จักกันมากขึ้นและสามัคคีธรรม"
@@ -337,7 +336,7 @@ const metadata = {
     <Fragment slot="bg">
       <div class="absolute inset-0 bg-blue-50 dark:bg-transparent"></div>
     </Fragment>
-  </Content>
+  </Content> -->
 
     <!-- Content Widget **************** -->
 
