fix(index.astro): update subtitle text
- Changed subtitle text to "คริสตจักรแห่งการสร้างสาวกและตั้งคริสตจักร"

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -55,9 +55,9 @@ const metadata = {
 
         <Fragment slot="subtitle">
             <span class="hidden sm:inline">
-                <span class="font-semibold text-blue-600">คริสตจักรที่เน้นการมี ​Relationship กับพระเจ้า</span>
+                <span class="font-semibold text-blue-600">คริสตจักรแห่งการสร้างสาวกและตั้งคริสตจักร</span>
             </span>
-            <span class="mb-1 block font-bold text-blue-600 sm:hidden">คริสตจักรที่เน้นการมี ​Relationship กับพระเจ้า</span>
+            <span class="mb-1 block font-bold text-blue-600 sm:hidden">คริสตจักรแห่งการสร้างสาวกและตั้งคริสตจักร</span>
         </Fragment>
     </Hero>
 
