--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -24,8 +24,8 @@ const googlePlayDownloadLink =
     'https://play.google.com/store/apps/details?id=com.seedchurchthailand.seed&pcampaignid=web_share'
 
 const metadata = {
-  title: 'คริสตจักรเมล็ดพันธุ์กรุงเทพ',
-  ignoreTitleTemplate: true,
+    title: 'คริสตจักรเมล็ดพันธุ์กรุงเทพ',
+    ignoreTitleTemplate: true,
 }
 ---
 
@@ -79,7 +79,7 @@ const metadata = {
             {
                 title: 'Teenatures Shall Be Leaders',
                 description:
-                    'ปรารถนาที่จะเห็นเยาวชนเป็นผู้นำในการเปลี่ยนแปลงในการเปลี่ยนแปลงประเทศไปในทางที่ดีตามแบบอย่างพระเยซูคริสต์',
+                    'ปรารถนาที่จะเห็นเยาวชนเป็นผู้นำในการเปลี่ยนแปลงประเทศไปในทางที่ดีตามแบบอย่างพระเยซูคริสต์',
                 // icon: 'tabler:brand-tailwind',
             },
         ]}
@@ -94,7 +94,7 @@ const metadata = {
         items={[
             {
                 title: 'เติบโตในการรู้จักพระเจ้า',
-                description: 'เราเติบโตผ่านการเฝ้าเดียว อธิฐาน อ่านพระคัมภีร์ นมันการ การสามัคคีอย่างสม่ำเสมอ',
+                description: 'เราเติบโตผ่านการเฝ้าเดียว อธิฐาน อ่านพระคัมภีร์ นมัสการ การสามัคคีอย่างสม่ำเสมอ',
             },
             {
                 title: 'เติบโตขึ้นในพระวิญญานบริสุทธิ์เพื่อเป้าหมายไพบูลย์พระคริสต์',
@@ -184,13 +184,13 @@ const metadata = {
             },
         ]}
         image={{
-            src:  '~/assets/images/culture/EstablishChurch.jpeg',
+            src: '~/assets/images/culture/EstablishChurch.jpeg',
             alt: 'EstablishChurch',
         }}
     >
         <Fragment slot="content">
             <h3 class="mb-2 text-2xl font-bold tracking-tight dark:text-white sm:text-3xl">E = Establish Church</h3>
-            ตั้งคริสตจักรของพระคริสต์ของพระเจ้า ไม่ใช้ของเรา
+            ตั้งคริสตจักรของพระคริสต์ของพระเจ้า ไม่ใช่ของเรา
         </Fragment>
 
         <Fragment slot="bg">
@@ -227,7 +227,7 @@ const metadata = {
             },
         ]}
         image={{
-            src:  '~/assets/images/culture/Discipleship.jpeg',
+            src: '~/assets/images/culture/Discipleship.jpeg',
             alt: 'Discipleship',
         }}
     />
@@ -299,7 +299,7 @@ const metadata = {
 
     <!-- Content Widget **************** -->
 
-  <!-- <Content
+    <!-- <Content
     id="porfolio"
     title="Small group"
     subtitle="หรือกลุ่มแคร์ที่เราจะได้รู้จักกันมากขึ้นและสามัคคีธรรม"
