--- a/src/components/widgets/Hero2.astro
+++ b/src/components/widgets/Hero2.astro
@@ -39,7 +39,7 @@ const {
                 {
                     title && (
                         <h1
-                            class="leading-tighter intersect-once intersect-quarter mb-4 font-heading text-5xl font-bold tracking-tighter dark:text-gray-200 md:text-6xl motion-safe:md:opacity-0 motion-safe:md:intersect:animate-fade"
+                            class="leading-tighter intersect-once intersect-quarter mb-4 font-heading text-5xl font-bold tracking-tighter  text-black  dark:text-gray-200 md:text-6xl motion-safe:md:opacity-0 motion-safe:md:intersect:animate-fade"
                             set:html={title}
                         />
                     )
