style: add highlight color variable
- Added `--aw-color-text-highlight` variable
- Applied to page title and some texts
- Improved dark mode text contrast
- Added image for GDC CAMP 2025
- Added blog post about GDC CAMP 2025

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -49,7 +49,7 @@ const metadata = {
         image={{ src: '~/assets/images/hero-image.png', alt: 'AstroWind Hero Image' }}
     >
         <Fragment slot="title">
-            คริสตจักร
+            <span style="color: var(--aw-color-text-highlight);">คริสตจักร</span>
             <span class="highlight text-green dark:text-white"> เมล็ดพันธุ์</span> กรุงเทพ
         </Fragment>
 
@@ -178,7 +178,7 @@ const metadata = {
                     'ตั้งคริสตจักรที่แข็งแรงโดยวางรากฐานของความเชื่อในพระเยซูคริสต์และตามหลักการพระวจนะของพระเจ้า',
             },
             {
-                title: 'ตั้งคริสจักรใหม่ด้วยการช่วยเหลือและสนับสนุนอย่างน้ำหนึ่งใจเดียวของคริสตจักรที่มีอยู่แล้ว',
+                title: 'ตั้งคริสตจักรใหม่ด้วยการช่วยเหลือและสนับสนุนอย่างน้ำหนึ่งใจเดียวของคริสตจักรที่มีอยู่แล้ว',
                 description:
                     'ตั้งคริสตจักรโดยการพึ่งพาการทรงนำจากพระเจ้าและแต่งตั้งผู้นำที่เติบโตฝ่ายวิญญาณมีชีวิตที่เป็ฯแบบอย่าง ในการดูแลคริสตจักร',
             },
