--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -49,8 +49,9 @@ const metadata = {
         image={{ src: '~/assets/images/hero-image.png', alt: 'AstroWind Hero Image' }}
     >
         <Fragment slot="title">
-            <span style="color: var(--aw-color-text-highlight);">คริสตจักร</span>
-            <span class="highlight text-green dark:text-white"> เมล็ดพันธุ์</span> กรุงเทพ
+            <span class="text-default dark:text-white">คริสตจักร</span>
+            <span class="highlight text-green dark:text-white"> เมล็ดพันธุ์</span> 
+            <span class="text-default dark:text-white">กรุงเทพ</span>
         </Fragment>
 
         <Fragment slot="subtitle">
