update color and  lab

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -50,7 +50,7 @@ const metadata = {
     >
         <Fragment slot="title">
             <span class="text-default dark:text-white">คริสตจักร</span>
-            <span class="highlight text-green dark:text-white"> เมล็ดพันธุ์</span> 
+            <span class="highlight text-green dark:text-white"> เมล็ดพันธุ์</span>
             <span class="text-default dark:text-white">กรุงเทพ</span>
         </Fragment>
 
@@ -90,7 +90,7 @@ const metadata = {
 
     <Content
         isReversed
-        tagline="Inside template"
+        tagline=""
         title="Our Culture"
         items={[
             {
