--- a/src/components/widgets/Content.astro
+++ b/src/components/widgets/Content.astro
@@ -44,7 +44,7 @@ const {
     <div class="mx-auto max-w-7xl p-4 md:px-8">
         <div class={`md:flex ${isReversed ? 'md:flex-row-reverse' : ''} md:gap-16`}>
             <div class="self-center md:basis-1/2">
-                {content && <div class="mb-12 text-lg dark:text-slate-400" set:html={content} />}
+                {content && <div class="mb-12 text-lg text-default dark:text-slate-400" set:html={content} />}
 
                 {
                     callToAction && (
