--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -118,7 +118,9 @@ const metadata = {
         }}
     >
         <Fragment slot="content">
-            <h3 class="mb-2 text-2xl font-bold tracking-tight dark:text-white sm:text-3xl">S = Spiritual Maturity</h3>
+            <h3 class="mb-2 text-2xl font-bold tracking-tight text-default dark:text-white sm:text-3xl">
+                S = Spiritual Maturity
+            </h3>
             การเติบโตฝ่ายวิญญาณในพระคริสต์
         </Fragment>
 
